--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-<h1>Hello, World</h1>
+<!DOCTYPE html>
+<html>
+   <head>
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Vollkorn:ital@0;1&display=swap" rel="stylesheet">
+      <script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
+      <script src="./index.js"></script>
+      <link rel="stylesheet" href="styles.css" />
+   </head>
+   <body>
+    <div class="background-item lax lax_preset_hueRotate:1137:134"></div>
+    <article class="scroller">
+        <section class="page double-column">
+            <div class="left-column">
+                <img class="full-image" src="./assets/alex_puesto.jpg" alt="Girl in a jacket"></img>
+            </div>
+          <div class="right-column">
+            <h1>Hello, World!</h1>
+            <h2>My name is Alex Reiter.</h2>
+          </div>
+        </section>
+        <section class="page single-column">
+            <h1>I'd like to become a computer science teacher!</h1>
+        </section>
+          <section class="page single-column">
+            <h1>I think I want to teach middle school...</h1>
+        </section>
+        <section class="page single-column">
+            <h1>but I'm open to high school too.</h1>
+        </section>
+        <section class="page single-column">
+            <h1>Before this summer, I was a software engineer for about 9 years.</h1>
+        </section>
+        <section class="page double-column">
+        <div class="left-column">
+            <h3>I just moved back to Massachusetts after living in sunny San Diego since 2015.</h3>
+          </div>
+          <div class="right-column">
+            <img src="./assets/salt_straw_fam.jpg" alt="Girl in a jacket">
+        </div>
+        </section>
+        <section class="page single-column">
+         <h1>In college, I was interested in making tools to help kids create with technology.</h1>
+        </section>
+        <section class="page single-column">
+            <h1>After school, I did several informal teaching experiences, including organizing an art / technology meetup called Code Kitchen.</h1>
+        </section>
+        <section class="page single-column">
+            <h1>Most recently, I helped create a workshop to introduce teen girls to p5.js by making kaleidoscopes.</h1>
+        </section>
+          <section class="page">
+            <div class="image" style="background-image: url('./assets/alex_puesto.jpg');"></div>
+            <div class="sprite kaleidoscope_1"></div>
+            <div class="sprite kaleidoscope_2"></div>
+            <div class="sprite kaleidoscope_3"></div>
+        </section>
+        <section class="page single-column">
+            <h1>I'm excited to learn with you all!</h1>
+        </section>
+    </article>
+    </div>
+   </body>
+</html>
+
