--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+       <title>Intro to Alex Reiter</title>
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Vollkorn:ital@0;1&display=swap" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
@@ -12,7 +13,7 @@
     <article class="scroller">
         <section class="page double-column">
             <div class="left-column">
-                <img class="full-image" src="./assets/alex_puesto.jpg" alt="Girl in a jacket"></img>
+                <img class="full-image" src="./assets/alex_puesto.jpg" alt="Girl in a jacket">
             </div>
           <div class="right-column">
             <h1>Hello, World!</h1>
@@ -58,7 +59,6 @@
             <h1>I'm excited to learn with you all!</h1>
         </section>
     </article>
-    </div>
    </body>
 </html>
 
