--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       <link rel="stylesheet" href="styles.css" />
    </head>
    <body>
-    <div class="background-item lax lax_preset_hueRotate:1137:134"></div>
-    <article class="scroller">
+    <div class="background-item lax lax_preset_hueRotate:370:34"></div>
+    <article class="scroller lax">
         <section class="page double-column">
             <div class="left-column">
-                <img class="full-image" src="./assets/alex_puesto.jpg" alt="Girl in a jacket">
+                <img class="full-image" src="./assets/alex_puesto.jpg" alt="Alex in a jacket">
             </div>
           <div class="right-column">
             <h1>Hello, World!</h1>
@@ -37,7 +37,7 @@
             <h3>I just moved back to Massachusetts after living in sunny San Diego since 2015.</h3>
           </div>
           <div class="right-column">
-            <img src="./assets/salt_straw_fam.jpg" alt="Girl in a jacket">
+            <img src="./assets/salt_straw_fam.jpg" alt="Alex, Andrew, and Ari eating ice cream">
         </div>
         </section>
         <section class="page single-column">
@@ -50,7 +50,6 @@
             <h1>Most recently, I helped create a workshop to introduce teen girls to p5.js by making kaleidoscopes.</h1>
         </section>
           <section class="page">
-            <div class="image" style="background-image: url('./assets/alex_puesto.jpg');"></div>
             <div class="sprite kaleidoscope_1"></div>
             <div class="sprite kaleidoscope_2"></div>
             <div class="sprite kaleidoscope_3"></div>
